--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,11 +1,7 @@
-.ant-menu-horizontal {
-  display: flex;
-}
-
-.ant-menu-item:nth-child(2),
+/* .ant-menu-item:nth-child(2),
 .ant-menu-item:nth-child(3) {
   margin: 0;
-}
+} */
 
 @media (max-width: 500px) {
   .headerMenu {
@@ -17,4 +13,16 @@
   .menuIcon {
     display: none;
   }
+}
+
+.space-container-3 {
+  display: flex;
+  justify-content: space-around;
+  /* border-bottom: 1px solid black; */
+  box-shadow: rgba(0, 0, 0, 0.1) 2px 2px 10px;
+  padding: 10px 0px;
+}
+
+.ant-btn.space-container-btn1 {
+  flex-grow: 1 !important;
 }
