--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,7 +2,14 @@
 .ant-menu-item:nth-child(3) {
   margin: 0;
 } */
-
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  background-color: #fff;
+}
 @media (max-width: 500px) {
   .headerMenu {
     display: none;
